# kibris-emlak-101evler-scraper

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE_SONNET_REPORT.md  COMPREHENSIVE_SCRAPER_GUIDE.md  DEBUG_REPORT.md  Dockerfile  FIX_PLAN.md  QUICK_START.md  README.md  README_FULL.md  README_RESTRUCTURE.md  RESTRUCTURE_COMPLETED.md  RESTRUCTURE_PLAN.md  SECURITY.md  SIMPLE_FLOW.md  START_HERE.md  config.py  crontab  dns_record.json  docker-compose.yml  extract_data.py  full_rental_scan.py  full_sale_scan.py  generate_agent_report.py  generate_full_report.py  project_status.py  pyproject.toml  replacements.txt  requirements.txt  setup-docker.bat  setup-docker.sh  setup.py  temp_check.py  test_crawl4ai.py  tunnel_config.json
analysis/: analyze_550_detailed.py  analyze_rentals_550.py  check_csv_rentals.py  check_data.py  check_excel.py  check_excel_30k35k.py  show_rental_categories.py
archive/: excel_report.py  extract_data.py  find_rental_categories.py  orchard_analysis.py  report.py  search.py
data/: site_analysis.json  site_analysis.txt
data_samples/: sample_girne_satilik_villa.xlsx  ~$sample_girne_satilik_villa.xlsx
docker/: Dockerfile  docker-compose.yml
docs/: DOCKER.md  NOTIFICATION_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_SETUP_GUIDE.md  NOTIFICATION_SYSTEM_RESEARCH.md  PI_HEALTH_AND_PROTECTION.md  QUICK_RESTART_GUIDE.md  SECURITY.md  TELEGRAM_BOT.md  TELEGRAM_BOT_GUIDE.md  THERMAL_OPTIMIZATION.md  URL_STRUCTURE_VISUAL.txt  WHY_MULTIPLE_CONFIGS.md
logs/: comprehensive_scan_20251108_053228.json  comprehensive_scan_20251108_053516.json  comprehensive_scan_20251108_054441.json  comprehensive_scan_20251108_054803.json  comprehensive_scan_20251108_061327.json  comprehensive_scan_20251108_192056.json  full_scan_20251106_051614.json  scraper_optimized_20251106_044125.json  scraper_optimized_20251106_044212.json
reports/: FULL_RENTAL_DATA_KKTC_20251106_054402.xlsx  FULL_RENTAL_DATA_KKTC_20251106_054402_summary.md  FULL_REPORT_550GBP_Rentals.md  FULL_SALE_DATA_KKTC_20251106_062942.xlsx  TOP10_rentals_under_550gbp.xlsx  (+20 more)
(+2854 files in other folders)
