[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emlak-scraper"
version = "2.0.0"
authors = [
    {name = "Xtra01", email = "xtra01@example.com"},
]
description = "KKTC 101evler.com emlak ilanları scraper - Professional real estate data extraction tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["scraping", "real-estate", "kktc", "101evler", "data-extraction"]

dependencies = [
    "crawl4ai>=0.4.252",
    "playwright>=1.49.1",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "tqdm>=4.67.1",
    "requests>=2.32.3",
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Xtra01/emlak-scraper"
Repository = "https://github.com/Xtra01/emlak-scraper"
Issues = "https://github.com/Xtra01/emlak-scraper/issues"

[project.scripts]
emlak-scan = "scripts.scan.full_rental_scan:main"
emlak-parse = "emlak_scraper.core.parser:main"
emlak-report = "emlak_scraper.reports.excel:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["emlak_scraper*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
